--- a/package.json
+++ b/package.json
@@ -2,9 +2,15 @@
     "name": "jwcrypto"
   , "version": "0.0.1"
   , "dependencies": {
-    "browserify": "1.5.0"
+    "browserify": "1.5.0",
+    "vows": "0.5.11"
   }
   , "scripts": {
-    "postinstall": "./bundle.sh"
+    "postinstall": "./bundle.sh",
+    "test": "vows"
+  }
+  , "repository" :
+  { "type" : "git"
+  , "url" : "http://github.com/mozilla/jwcrypto.git"
   }
 }
