export generate-keypair as a binary from the package, so it's more convenient to invoke from code using the npm package.

--- a/package.json
+++ b/package.json
@@ -13,4 +13,7 @@
   { "type" : "git"
   , "url" : "http://github.com/mozilla/jwcrypto.git"
   }
+  , "bin" : {
+    "generate-keypair": "./generate-keypair.js"
+  }
 }
