--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   , "version": "0.0.1"
   , "dependencies": {
     "browserify": "1.5.0",
-    "vows": "0.5.11"
+    "vows": "0.5.11",
+    "optimist": "0.2.6"
   }
   , "scripts": {
     "postinstall": "./bundle.sh",
