add command line argument to generate-keypair to be able to generate DSA or RSA keypairs - move tools into bin/

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   , "url" : "http://github.com/mozilla/jwcrypto.git"
   }
   , "bin" : {
-    "generate-keypair": "./generate-keypair.js",
-    "check-assertion": "./check-assertion.js"
+    "generate-keypair": "./bin/generate-keypair",
+    "check-assertion": "./bin/check-assertion"
   }
 }
