--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
     "name": "jwcrypto"
-  , "version": "0.1.2"
+  , "version": "0.2.0"
   , "dependencies": {
     "browserify": "1.8.1",
     "vows": "0.5.13",
     "optimist": "0.2.6",
+    "uglify-js": "1.0.6",
     "bigint": "https://github.com/benadida/node-bigint/tarball/2ac68"
   }
   , "scripts": {
@@ -15,6 +16,7 @@
   { "type" : "git"
   , "url" : "http://github.com/mozilla/jwcrypto.git"
   }
+  , "main" : "index.js"
   , "bin" : {
     "generate-keypair": "./bin/generate-keypair",
     "check-assertion": "./bin/check-assertion",
