--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
     "name": "jwcrypto"
-  , "version": "0.3.2"
+  , "version": "0.4.0"
   , "dependencies": {
     "browserify": "1.8.1",
     "vows": "0.5.13",
     "optimist": "0.2.6",
     "uglify-js": "1.0.6",
-    "bigint": "https://github.com/benadida/node-bigint/tarball/2ac68"
+    "bigint": "0.3.9"
   }
   , "scripts": {
     "postinstall": "bash bundle.sh",
