--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "browserify": "1.8.1",
     "vows": "0.5.13",
     "optimist": "0.2.6",
-    "uglify-js": "1.0.6",
+    "uglify-js": "1.0.6"
+  }
+  , "optionalDependencies": {
     "bigint": "https://github.com/benadida/node-bigint/tarball/2ac68"
   }
   , "scripts": {
