--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "uglify-js": "1.0.6"
   }
   , "optionalDependencies": {
-    "bigint": "https://github.com/benadida/node-bigint/tarball/2ac68"
+    "bigint": "0.3.9"
   }
   , "scripts": {
     "postinstall": "node ./scripts/bundle.js",
