--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   , "version": "0.4.2"
   , "dependencies": {
     "browserify": "1.13.5",
+    "http-browserify": "0.1.1",
     "vows": "0.5.13",
     "optimist": "0.2.6",
     "uglify-js": "1.0.6"
