--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "node": ">= 0.8.11"
   },
   "optionalDependencies": {
-    "bigint": "0.4.2"
+    "bignum": "0.9.2"
   },
   "scripts": {
     "postinstall": "node ./scripts/bundle.js",
