--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "scripts": {
     "postinstall": "node ./scripts/bundle.js",
-    "test": "./node_modules/.bin/vows"
+    "test": "vows"
   },
   "repository": {
     "type": "git",
