--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jwcrypto",
+  "name": "browserid-crypto",
   "version": "0.5.2",
   "dependencies": {
     "browserify": "5.9.1",
@@ -24,7 +24,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "http://github.com/mozilla/jwcrypto.git"
+    "url": "http://github.com/mozilla/browserid-crypto.git"
   },
   "main": "index.js",
   "bin": {
