--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,8 @@ node_js:
  - "0.10"
 
 notifications:
-  email:
-    - lloyd@mozilla.com
-    - benadida@mozilla.com
-    - warner@mozilla.com
+  irc:
+    channels:
+      - "irc.mozilla.org#fxa"
+    use_notice: false
+    skip_join: false
