--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "walk": "~2.2.1"
   },
   "engines": {
-    "node": ">= 0.8.11"
+    "node": ">= 0.10"
   },
   "optionalDependencies": {
-    "bigint": "0.4.2"
+    "bignum": "0.11.0"
   },
   "scripts": {
     "postinstall": "node ./scripts/bundle.js",
