--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,13 @@ node_js:
  - "0.10"
  - "0.12"
  - "4"
+ - "6"
 
 sudo: false
+
+env:
+  global:
+    CXX=g++-4.8
 
 addons:
   apt:
@@ -15,7 +20,7 @@ addons:
     - g++-4.8
 
 before_install:
-  - npm install -g npm@2
+  - if [[ $(npm --version | sed 's/\..*//') == "1" ]]; then npm install -g npm@2; fi
   - npm config set spin false
 
 notifications:
@@ -24,10 +29,6 @@ notifications:
       - "irc.mozilla.org#fxa-bots"
     use_notice: false
     skip_join: false
-
-install:
-  # use c++-11 with node4, default compiler on downlevel versions
-  - if [ $TRAVIS_NODE_VERSION == "4" ]; then CXX=g++-4.8 npm install; else npm install; fi
 
 script:
   - npm test
