fix(deps): Update bignum dependency to build on node10

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "node": ">= 0.10"
   },
   "optionalDependencies": {
-    "bignum": "0.12.5"
+    "bignum": "~0.13.0"
   },
   "scripts": {
     "postinstall": "node ./scripts/bundle.js",
